Closed
Bug 576384
Opened 15 years ago
Closed 15 years ago
AsyncChannel::ReportConnectionError case ChannelTimeout and case ChannelClosing are missing break
Categories
(Core :: IPC, defect)
Core
IPC
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
References
(Blocks 1 open bug, )
Details
(Keywords: coverity)
Attachments
(1 file)
|
747 bytes,
patch
|
cjones
:
review+
|
Details | Diff | Splinter Review |
407 AsyncChannel::ReportConnectionError(const char* channelName) const
408 {
409 const char* errorMsg;
410 switch (mChannelState) {
417 case ChannelTimeout:
418 errorMsg = "Channel timeout: cannot send/recv";
419 case ChannelClosing:
420 errorMsg = "Channel closing: too late to send/recv, messages will be lost";
421 case ChannelError:
422 errorMsg = "Channel error: cannot send/recv";
423 break;
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #455686 -
Flags: review?(jones.chris.g)
Comment on attachment 455686 [details] [diff] [review]
break break
Sigh
Attachment #455686 -
Flags: review?(jones.chris.g) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Blocks: coverity-analysis
You need to log in
before you can comment on or make changes to this bug.
Description
•