Bug 576384 AsyncChannel::ReportConnectionError case ChannelTimeout and case ChannelClosing are missing break r=cjones