ipc/glue/AsyncChannel.cpp
@@ -417,8 +417,10 @@ AsyncChannel::ReportConnectionError(const char* channelName) const
         break;
     case ChannelTimeout:
         errorMsg = "Channel timeout: cannot send/recv";
+        break;
     case ChannelClosing:
         errorMsg = "Channel closing: too late to send/recv, messages will be lost";
+        break;
     case ChannelError:
         errorMsg = "Channel error: cannot send/recv";
         break;
